Fix share menu spacing

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -492,7 +492,7 @@
       cursor: pointer
 
       &:before
-        margin-right: .6em
+        margin-right: .3em
         font-size: 1.5em
         vertical-align: -0.1em
   .fp-qsel-menu
@@ -509,6 +509,7 @@
       color: #fff
       white-space: nowrap
   .fp-share-menu
+    width: 9em
     &.fp-active
       bottom: auto
 
